CNV-12 Version alignment — fallbacks bump + fixAnnotationsConflict + publicationType default PLUGIN
US-CN-12.1: Bump fallbacks (kotlin-test-junit5 2.4.10, BOM 0.0.13)
US-CN-12.2: fixAnnotationsConflict in GradlePluginConventionsExtension
US-CN-12.3: publicationType default LIBRARY -> PLUGIN
Dogfood: graphify + api-key-pool explicitent publicationType = LIBRARY

44/44 Cucumber + 23/23 functional = 67 tests PASS.
Borough LIQUIDE — tous les EPICs CNV-0->CNV-12 + PUB termines (113 pts).